tests/parsing/smtlib/v2.6/errors/001_identifier_index_1.expected
File "tests/parsing/smtlib/v2.6/errors/001_identifier_index_1.smt2", line 2, character 13-17:
2 | (assert (as (blah) bar))
                 ^^^^
Error while parsing an identifier, read the symbol 'blah',
      but expected an underscore: identifiers starting with an opening
      parenthesis must be indexed identifiers, of the form "(_ symbol
      index+)".
